--- a/mymap.Rmd
+++ b/mymap.Rmd
@@ -27,6 +27,69 @@ knitr::opts_chunk$set(echo = T, eval = T, message = F, warning = F, fig.pos = "H
 
 ```
 
+# Map in Leaflet
+
+
+```{r, include=FALSE}
+# Get map data
+basemap <- leaflet() %>% addProviderTiles("CartoDB.Positron")
+wldmap <- rgdal::readOGR(dsn = "./World_Countries__Generalized_", layer = "World_Countries__Generalized_", encoding = "UTF-8") # downloaded Esri ArcGIS Hub (https://hub.arcgis.com/datasets/esri::world-countries-generalized/about)
+
+# Remove Antarctica
+wldmap <- wldmap[wldmap@data$ISO!="AQ",]
+
+## Countries where I have had professional relationships
+biz_country <- c("AU","BD","BF","CA","CL","CN","CY","DE","EG","FR","GB",
+                 "IL","IN","KE","KH","KR","LK","MN","MX","NG","PL","RU",
+                 "SG","US")
+
+## Countries I visited
+vis_country <- c("AU","BE","BN","CA","FR","GB","GU","IN","IT","KE",
+                 "KH","KR","MX","NL","NZ","PH","SG","TH","TW","US","VN")
+
+## Countries my friends come from
+fri_country <- c("AE","AF","AL","AU","BN","BR","CN","CO","CV","DK","ES",
+                 "FR","HK","IN","IT","KE","KP","KR","MM","MX","PE","PH",
+                 "PK","PR","SA","SV","TH","TW","UG","US","USA","VN")
+
+# Subset countries
+biz <- wldmap[wldmap@data$ISO %in% biz_country,]
+vis <- wldmap[wldmap@data$ISO %in% vis_country,]
+fri <- wldmap[wldmap@data$ISO %in% fri_country,]
+hom <- wldmap[wldmap@data$ISO == "JP",]
+```
+
+Show a map
+
+```{r}
+basemap %>%
+  # Home - Black
+  # Friends - Red
+  # Business - Blue
+  # Visit - Orange
+  addPolygons(data=hom, color = "black",
+              weight = 1, fillOpacity = 0.3,
+              group = "Home",
+              popup = paste("<p>", hom@data$COUNTRY,"<p>")) %>%
+  addPolygons(data=biz, color = "blue",
+              weight = 1, fillOpacity = 0.3,
+              group = "Business",
+              popup = paste("<p>", biz@data$COUNTRY,"<p>")) %>%
+  addPolygons(data=vis, color = "orange",
+              weight = 1, fillOpacity = 0.3,
+              group = "Visited",
+              popup = paste("<p>", vis@data$COUNTRY,"<p>")) %>%
+  addPolygons(data=fri, color = "red",
+              weight = 1, fillOpacity = 0.3,
+              group = "Friends",
+              popup = paste("<p>", fri@data$COUNTRY,"<p>")) %>%
+  addLayersControl(overlayGroups = c("Friends","Visited","Business"))
+  
+```
+
+
+# Map in ggplot
+
 ```{r}
 # Loading World data
 world <- map_data("world")
@@ -37,15 +100,17 @@ world$region %>%
 biz_country <- c("Australia","Bangladesh","Burkina Faso",
                  "Chile","Cyprus","China","Germany","Egypt","France",
                  "UK","India","Israel","Italy","Kenya","Cambodia","South Korea",
-                 "Mongolia","Poland","Russia","Singapore","USA")
+                 "Sri Lanka","Mongolia","Poland","Russia","Singapore","USA")
 vis_country <- c("Australia","Belgium","Brunei","Canada","France",
                  "Guam","India","Italy","Kenya","Cambodia","South Korea",
                  "Mexico","Netherlands","New Zealand","Philippines","Singapore",
                  "Thailand","Taiwan","USA","Vietnam")
-fri_country <- c("Afghanistan","Albania","Australia","Brazil","Brunei","Canada","Colombia",
-                 "Cape Verde","China","Denmark","Spain","France","India","Italy","Kenya",
-                 "South Korea","Saudi Arabia","Mexico","Myanmar","Pakistan","Peru","Philippines",
-                 "Puerto Rico","North Korea","El Salvador","Thailand","Taiwan","Uganda",
+fri_country <- c("Afghanistan","Albania","Australia","Brazil","Brunei",
+                 "Canada","Colombia","Cape Verde","China","Denmark","Spain",
+                 "France","India","Italy","Kenya",
+                 "South Korea","Saudi Arabia","Mexico","Myanmar",
+                 "Pakistan","Peru","Philippines","Puerto Rico",
+                 "North Korea","El Salvador","Thailand","Taiwan","Uganda",
                  "USA","United Arab Emirates","Vietnam")
 
 
@@ -63,11 +128,6 @@ world$cat <- replace_na(world$cat,'NA')
 
 world$cat <- factor(world$cat, levels = c("biz","fri","vis","hom","NA"))
 
-# # Select the countries you want to keep
-# biz <- subset(world, region %in% biz_country)
-# vis <- subset(world, region %in% vis_country)
-# fri <- subset(world, region %in% fri_country)
-# hom <- subset(world, region %in% c("Japan"))
 ```
 
 Show a map
@@ -81,68 +141,11 @@ ggplot(data = world, aes(x = long, y = lat, group = group)) +
   #Add a theme to your final map
   theme_void() +
   theme(legend.position = "bottom") + 
-# Add titles to your axis (optional)
+  # Add titles to your axis (optional)
   xlab("") +
   ylab("") +
   # Choose the size of your map
   coord_fixed(ratio=1.5, xlim = c(-165,175), ylim = c(-50,78))
 
-```
-
-
-
-```{r, include=FALSE}
-# Get map data
-# basemap <- leaflet() %>% addProviderTiles("CartoDB.Positron")
-
-#ISO - raster::getData("ISO3")
-# biz_country <- c("AUS","BGD","BFA","KHM","CHL","CYP","EGY","FRA","DEU","IND",
-#                  "ISR","KEN","MNG","RUS","SGP","GBR","USA","CHN")
-# vis_country <- c("BEL","KHM","CAN","FRA","IND","ITA","KEN","MEX","NLD","NZL",
-#                  "SGP","KOR","TWN","THA","GBR","USA","VNM","BRN","PHL")
-# fri_country <- c("AFG","ALB","AUS","BRA","CAN","CPV","COL","DNK","SLV","FRA",
-#                  "HKG","IND","ITA","KEN","MEX","MMR","PRK","PAK","PER","SAU",
-#                  "KOR","TWN","THA","UGA","ARE","USA","VNM","BRN","PHL","CHN")
-# 
-# 
-# fri <- vis <- biz <- raster::getData("GADM", country = "JPN", level = 0)
-# 
-# # business
-# for (i in biz_country){
-#   a <- raster::getData("GADM", country = i, level = 0)
-#   biz <- rbind(biz, a)
-# }
-# 
-# # visit
-# for (i in vis_country){
-#   a <- raster::getData("GADM", country = i, level = 0)
-#   vis <- rbind(vis, a)
-# }
-# 
-# # friend
-# for (i in fri_country){
-#   a <- raster::getData("GADM", country = i, level = 0)
-#   fri <- rbind(fri, a)
-# }
-
-```
-
-
-```{r, include=FALSE}
-# basemap %>% 
-#   # Friends - Red
-#   # Business - Blue
-#   # Visit - Orange
-#   addPolygons(data=biz, color = "blue",
-#               weight = 1, fillOpacity = 0.3,
-#               group = "Business") %>% 
-#   addPolygons(data=vis, color = "orange",
-#               weight = 1, fillOpacity = 0.3,
-#               group = "Visited") %>% 
-#   addPolygons(data=fri, color = "red",
-#               weight = 1, fillOpacity = 0.3,
-#               group = "Friends") %>% 
-#   addLayersControl(overlayGroups = c("Friends","Visited","Business"))
-  
 ```
 
