--- a/mymap.Rmd
+++ b/mymap.Rmd
@@ -41,7 +41,7 @@ wldmap <- wldmap[wldmap@data$ISO!="AQ",]
 ## Countries where I have had professional relationships
 biz_country <- c("AU","BD","BF","CA","CL","CN","CY","DE","EG","FR","GB",
                  "IL","IN","KE","KH","KR","LK","MN","MX","NG","PL","RU",
-                 "SG","US")
+                 "SG","US","ZW")
 
 ## Countries I visited
 vis_country <- c("AU","BE","BN","CA","FR","GB","GU","IN","IT","KE",
@@ -50,7 +50,8 @@ vis_country <- c("AU","BE","BN","CA","FR","GB","GU","IN","IT","KE",
 ## Countries my friends come from
 fri_country <- c("AE","AF","AL","AU","BN","BR","CN","CO","CV","DK","ES",
                  "FR","HK","IN","IT","KE","KP","KR","MM","MX","PE","PH",
-                 "PK","PR","SA","SV","TH","TW","UG","US","USA","VN")
+                 "PK","PR","SA","SV","TH","TW","UG","US","USA","VN","HT",
+                 "NL","ET")
 
 # Subset countries
 biz <- wldmap[wldmap@data$ISO %in% biz_country,]
