--- a/mymap.Rmd
+++ b/mymap.Rmd
@@ -9,7 +9,7 @@ output: html_document
 if (TRUE) {
   list.of.packages <- c("tidyverse", "haven", "here", "kableExtra","rstudioapi",
                         "DescTools","qwraps2","data.table","stargazer","readxl","dplyr",
-                        "rootSolve","sp","raster","rgdal","leaflet","wesanderson","plotKML",
+                        "rootSolve","sp","raster","rgdal","leaflet","wesanderson",
                         "mapview", "maps")
   new.packages <- list.of.packages[
     !( list.of.packages %in% installed.packages()[,"Package"] )
@@ -20,7 +20,7 @@ if (TRUE) {
   lapply(list.of.packages, library, character.only = TRUE)
 }
 
-setwd(dirname(getActiveDocumentContext()$path)) 
+# setwd(dirname(getActiveDocumentContext()$path)) 
 
 knitr::opts_knit$set(root.dir = here())
 knitr::opts_chunk$set(echo = T, eval = T, message = F, warning = F, fig.pos = "H", fig.height = 6, fig.width = 12)
