--- a/mymap.Rmd
+++ b/mymap.Rmd
@@ -20,7 +20,7 @@ if (TRUE) {
   lapply(list.of.packages, library, character.only = TRUE)
 }
 
-# setwd(dirname(getActiveDocumentContext()$path)) 
+# setwd(dirname(getActiveDocumentContext()$path))
 
 knitr::opts_knit$set(root.dir = here())
 knitr::opts_chunk$set(echo = T, eval = T, message = F, warning = F, fig.pos = "H", fig.height = 6, fig.width = 12)
@@ -51,7 +51,7 @@ vis_country <- c("AU","BE","BN","CA","FR","GB","GU","IN","IT","KE",
 fri_country <- c("AE","AF","AL","AU","BN","BR","CN","CO","CV","DK","ES",
                  "FR","HK","IN","IT","KE","KP","KR","MM","MX","PE","PH",
                  "PK","PR","SA","SV","TH","TW","UG","US","USA","VN","HT",
-                 "NL","ET", "PT")
+                 "NL","ET", "PT","AZ","BD","SN")
 
 # Subset countries
 biz <- wldmap[wldmap@data$ISO %in% biz_country,]
@@ -112,7 +112,8 @@ fri_country <- c("Afghanistan","Albania","Australia","Brazil","Brunei",
                  "South Korea","Saudi Arabia","Mexico","Myanmar",
                  "Pakistan","Peru","Philippines","Puerto Rico",
                  "North Korea","El Salvador","Thailand","Taiwan","Uganda",
-                 "USA","United Arab Emirates","Vietnam", "Portugal")
+                 "USA","United Arab Emirates","Vietnam", "Portugal","Haiti",
+                 "Bangladesh","Azerbaijan","Senegal")
 
 
 # Remove the Antarctica region
